ДЗ5 - Prometheus. Grafana/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-ms
  labels:
    app: otus-ms
spec:
  selector:
    app: otus-ms
  ports:
    - protocol: TCP
      name: metrics
      port: 80
      targetPort: 80
